ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-juicer-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bvt-juice.norwayeast.cloudapp.azure.com
    secretName: juice-tls-secret
  rules:
  - host: bvt-juice.norwayeast.cloudapp.azure.com
    http:
      paths:
        - path: /ctfd
          pathType: Prefix
          backend:
            service:
              name: ctfd-ctfd
              port:
                number: 80
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: juice-balancer
              port:
                number: 3000
